Fixing staff page image sizes & spacing on tablets.

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -78,7 +78,7 @@ $breakpoints: (
   xs: 480px,
   sm: 640px,
   md: 768px,
-  lg: 900px,
+  lg: 1024px,
   xl: 1100px
 );
 
